add de tous les chapitres numérotés avec 0 / élimination des chapitres en doublon ou non travaillés préalablement

--- a/Chapitre 01 - Au début était la variable.ipynb
+++ b/Chapitre 01 - Au début était la variable.ipynb
@@ -1,5 +1,5 @@
 {
- "cells": [
+ "cells": [/home/tnah
   {
    "cell_type": "markdown",
    "metadata": {},
@@ -23,13 +23,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A vos marques, prêts, partez yeaah!\n"
+     ]
+    }
+   ],
    "source": [
-    "print(\"A vos marques, prêts, partez!\")"
+    "print(\"A vos marques, prêts, partez yeaah!\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "rajout personnel, ceci à été fait avec un texte sur Visual Studio\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Cellule rajoutée \n",
+    "\n",
+    "print(\"rajout personnel, ceci à été fait avec un texte sur Visual Studio\")"
    ]
   },
   {
@@ -62,13 +89,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10080\n"
+     ]
+    }
+   ],
    "source": [
-    "# Votre code ici"
+    "# Votre code ici\n",
+    "print(60*24*7)"
    ]
   },
   {
@@ -89,11 +125,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
    "source": [
     "x = 2\n",
     "print(x)"
@@ -108,11 +152,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
    "source": [
     "print(x * x)\n",
     "print(x == x)\n",
@@ -130,11 +184,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Les Mains Sales\n"
+     ]
+    }
+   ],
    "source": [
     "book = \"Les Mains Sales\"\n",
     "print(book)"
@@ -151,11 +213,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'Les' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-49-876d52c852c3>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mbook\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mLes\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'Les' is not defined"
+     ]
+    }
+   ],
    "source": [
     "book = Les"
    ]
@@ -180,12 +254,27 @@
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Les Mains Sales\n"
+     ]
+    }
+   ],
    "source": [
     "# À éviter...\n",
     "banane = \"Les Mains Sales\"\n",
     "print(banane)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -208,6 +297,13 @@
    "source": [
     "nombre_de_memoires = 100"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -574,10 +670,20 @@
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12\n",
+      "onty\n"
+     ]
+    }
+   ],
    "source": [
-    "dernieres_deux_lettres = nom[-2:]\n",
-    "print(dernieres_deux_lettres)"
+    "prenom = \"Monty Python\"\n",
+    "print(len(prenom))\n",
+    "print(prenom[1:5])"
    ]
   },
   {
@@ -585,7 +691,8 @@
    "metadata": {},
    "source": [
     "Regardez ce qui suit. Le comprenez vous ?? \n",
-    "<div style=\"display:block; text-align:center;\"><img src=\"http://www.nltk.org/images/string-slicing.png\" align=center /></div>"
+    "<div style=\"display:block; text-align:center;\"><img src=\"http://www.nltk.org/images/string-slicing.png\" align=center /></div>\n",
+    "\n"
    ]
   },
   {
@@ -711,7 +818,15 @@
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "L\n"
+     ]
+    }
+   ],
    "source": [
     "premier_mot = phrase[0]\n",
     "print(premier_mot)"
@@ -730,10 +845,20 @@
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Le', 'nom', 'Python', 'est', 'dérivé', 'de', 'la', 'série', 'télévisée', 'Monty', \"Python's\", 'Flying', 'Circus.']\n",
+      "['Python', 'est', 'dérivé', 'de', 'la', 'série', 'télévisée', 'Monty', \"Python's\"]\n"
+     ]
+    }
+   ],
    "source": [
     "mots = phrase.split()\n",
-    "print(mots)"
+    "print(mots)\n",
+    "print(mots[2:-2])"
    ]
   },
   {
@@ -1216,7 +1341,15 @@
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Arme de main faite d'une lame d'acier pointue fixée à une poignée munie d'une garde.\n"
+     ]
+    }
+   ],
    "source": [
     "description = dictionnaire[\"épée\"]\n",
     "print(description)"
@@ -1454,7 +1587,18 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Les poèmes de Paul Celan\n",
+      "2\n",
+      "Voyage au bout de la nuit\n",
+      "9\n"
+     ]
+    }
+   ],
    "source": [
     "print(bonne_lecture_tuple[0][0])\n",
     "print(len(bonne_lecture_tuple))\n",
@@ -1473,7 +1617,19 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'tuple' object does not support item assignment",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-28-148b6bd1faa6>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mbonne_lecture_tuple\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m7\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m: 'tuple' object does not support item assignment"
+     ]
+    }
+   ],
    "source": [
     "bonne_lecture_tuple[0][0] = 7"
    ]
@@ -1482,7 +1638,19 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'tuple' object has no attribute 'append'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-29-6114f19f4097>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mbonne_lecture_tuple\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m: 'tuple' object has no attribute 'append'"
+     ]
+    }
+   ],
    "source": [
     "bonne_lecture_tuple[0].append(5)"
    ]
@@ -1570,13 +1738,36 @@
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 < 5 est True\n",
+      "3 > 7 est False\n",
+      "3 == 4 est False\n",
+      "école == devoirs est False\n",
+      "Python != perl est True\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{1: 'a', 2: 'b'}"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "print(\"2 < 5 est\", 2 < 5)\n",
     "print(\"3 > 7 est\", 3 >= 7)\n",
     "print(\"3 == 4 est\", 3 == 4)\n",
     "print(\"école == devoirs est\", \"école\" == \"devoirs\")\n",
-    "print(\"Python != perl est\", \"Python\" != \"perl\")"
+    "print(\"Python != perl est\", \"Python\" != \"perl\")\n",
+    "dict([[1, \"a\"], [2, \"b\"]])"
    ]
   },
   {
@@ -1679,7 +1870,19 @@
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'bonnes_lectures' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-12-c0aa8a85612f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mif\u001b[0m \u001b[0;34m\"Voyage au bout de la nuit\"\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mbonnes_lectures\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"On l'a!\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'bonnes_lectures' is not defined"
+     ]
+    }
+   ],
    "source": [
     "if \"Voyage au bout de la nuit\" in bonnes_lectures:\n",
     "    print(\"On l'a!\")"
@@ -2443,6 +2646,9 @@
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "a731cfdc80aa9b158f522abc7fc801b82b0494789aa66fe8c8fcfd84c19ea0ae"
+  },
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
@@ -2458,7 +2664,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.8.5"
   },
   "toc": {
    "base_numbering": 1,
