--- a/Chapitre 02 - Les fonctions et les fichiers.ipynb
+++ b/Chapitre 02 - Les fonctions et les fichiers.ipynb
@@ -118,8 +118,8 @@
    "outputs": [],
    "source": [
     "# Ajoutez `encoding='UTF-8'` si nécessaire\n",
-    "fichier_ouvert = open('data/cid.v1071.1682.txt') \n",
-    "texte = fichier_ouvert.read()"
+    "fichier_ouvert = open('data/cid.v1071.1682.txt', encoding='UTF-8') \n",
+    "texte = fichier_ouvert.read()\n"
    ]
   },
   {
@@ -135,7 +135,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fichier_ouvert.close()"
+    "fichier_ouvert.close()\n",
+    "print(texte)\n"
    ]
   },
   {
@@ -168,6 +169,13 @@
    "outputs": [],
    "source": [
     "nombre_de_e = 0\n",
+    "for lettre_e in texte:\n",
+    "    if lettre_e == \"e\":\n",
+    "        nombre_de_e += 1\n",
+    "\n",
+    "print(nombre_de_e)\n",
+    "\n",
+    "\n",
     "# Votre code ici\n",
     "\n",
     "# Ce code vérifiera ce que vous avez écrit\n",
@@ -188,7 +196,8 @@
    "outputs": [],
    "source": [
     "with open(\"data/cid.v1071.1682.txt\") as fichier_cid:\n",
-    "    texte = fichier_cid.read()"
+    "    texte = fichier_cid.read()\n",
+    "    "
    ]
   },
   {
@@ -350,6 +359,15 @@
     "a_compter = \"la\"\n",
     "# Votre code ici\n",
     "\n",
+    "nombre_de_resultats = 0\n",
+    "for mot in mots:\n",
+    "    if mot == a_compter:\n",
+    "        nombre_de_resultats +=1\n",
+    "        \n",
+    "print(nombre_de_resultats)\n",
+    "\n",
+    "\n",
+    "\n",
     "# Ce test ne devrait pas lancer d'erreur si tout va bien\n",
     "assert nombre_de_resultats == 3, \"Il devrait y avoir 6 résultats\""
    ]
@@ -392,7 +410,10 @@
    "source": [
     "a_compter = \"la\"\n",
     "nombre_de_resultats = mots.count(a_compter)\n",
-    "print(nombre_de_resultats)"
+    "print(nombre_de_resultats)\n",
+    "#moi :   test : \n",
+    "print(mots.count(a_compter))\n",
+    "\n"
    ]
   },
   {
@@ -474,7 +495,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(compter_dans_une_autre_chaine(\"à\", texte))"
+    "print(compter_dans_une_autre_chaine(\"à\", texte))\n"
    ]
   },
   {
@@ -504,7 +525,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# votre code ici"
+    "print(compter_dans_une_autre_chaine(\"mon\", texte))"
    ]
   },
   {
@@ -606,7 +627,13 @@
     "        # Je assigne à la clef mot le nombre de fois que la valeur de `mot`\n",
     "        #    apparaît dans `mots`\n",
     "print(decompte)\n",
-    "print(decompte['mon'])"
+    "print(decompte['mon'])\n",
+    "print(decompte.keys())\n",
+    "print(decompte.items())\n",
+    "print(decompte.values())\n",
+    "\n",
+    "#moi : pourquoi faut-il spécifier qu'une clé soit ajoutée QUE SI elle n'est pas dans le dic ? qu'est ce qu ça change dans le résultat ?\n",
+    "#j'imagine que ça permet d'éviter de refaire l'opération, même si le résultat est le même, cela prend moins de temps"
    ]
   },
   {
@@ -631,7 +658,20 @@
     "    for mot in mots:\n",
     "        if mot not in decompte:\n",
     "            decompte[mot] = mots.count(mot)\n",
-    "    return decompte"
+    "    return decompte\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#noter que le return donne un DICTIONNAIRE, si j'utilise 'comptage(mots)', sa valeur est un dic\n",
+    "#moi : exemple : la fonction agit sur une liste, donc le texte doit être .splité avant ou bien\n",
+    "#je n'aurai qu'un dic de lettres. Exemple : \n",
+    "texteliste = texte.split()\n",
+    "comptage(texteliste)\n"
    ]
   },
   {
@@ -655,9 +695,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#moi : mots est une liste qui existe déjà\n",
     "print(comptage(mots))\n",
     "vocabulaire_cid = comptage(mots)\n",
-    "print('\"mon\" apparaît ' + str(vocabulaire_cid['mon']) + ' fois.')"
+    "print('\"mon\" apparaît ' + str(vocabulaire_cid['mon']) + ' fois.')\n",
+    "#str car on ne peut pas concaténer des entiers \n"
    ]
   },
   {
@@ -688,6 +730,21 @@
    "outputs": [],
    "source": [
     "# Votre code ici\n",
+    "with open(\"data/misanthrope.acte3.scene4.txt\") as texte_misanthrope:\n",
+    "    chaine_misanthrope = texte_misanthrope.read()\n",
+    "    liste_misanthrope = chaine_misanthrope.split()\n",
+    "    dic_misanthrope = comptage(liste_misanthrope)\n",
+    "    compte_de_mais = dic_misanthrope['mais']\n",
+    "print(compte_de_mais)\n",
+    "#moi rappel : with open ferme le document, mais ses variables internes peuvent être appelées après\n",
+    "\n",
+    "with open(\"data/misanthrope.acte3.scene4.txt\") as texte:\n",
+    "    texte = texte.read()\n",
+    "    texte = texte.split()\n",
+    "    texte = comptage(texte)\n",
+    "    compte_de_mais = texte['mais']\n",
+    "print(compte_de_mais)\n",
+    "    \n",
     "\n",
     "# Le test suivant ne devrait pas créer d'erreurs\n",
     "assert compte_de_mais == 4, \"Il y a 4 'mais'\""
@@ -725,15 +782,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 403,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'c', 'a', 'b'}\n",
+      "{1, 2, 3, 4}\n",
+      "1\n"
+     ]
+    }
+   ],
    "source": [
     "x = ['a', 'a', 'b', 'b', 'c', 'c', 'c']\n",
     "unique_x = set(x)\n",
     "y = [1, 1, 4, 3, 1, 2, 2, 4]\n",
     "print(unique_x)\n",
-    "print(set(y))"
+    "print(set(y))\n",
+    "print([0,1,2,3,4,5][1])"
    ]
   },
   {
@@ -786,9 +854,10 @@
     "    sans_doublon = set(mots)\n",
     "    compteur = {}\n",
     "    for mot in sans_doublon:\n",
-    "        compteur[mot] = mots.count(mot)\n",
-    "        print(mot)\n",
-    "    return compteur"
+    "        compteur[mot] = mots.count(mot)    \n",
+    "    return compteur\n",
+    "#mot est dans sans_doublon, mais on compte bel et bien dans mots, le texte cible\n",
+    "#tous les mots sont présents, mais n'ont pas de doublons !\n"
    ]
   },
   {
@@ -805,7 +874,7 @@
    "outputs": [],
    "source": [
     "decompte = comptage2(mots)\n",
-    "print(decompte[\"et\"])"
+    "print(decompte['et'])"
    ]
   },
   {
@@ -838,7 +907,7 @@
     "def comptage2(mots):\n",
     "    \"\"\" Compte et stocke le décompte de chaque mot dans une liste de mots\n",
     "    \n",
-    "    :param mots: Liste de mosts\n",
+    "    :param mots: Liste de mots\n",
     "    :type mots: list\n",
     "    :returns: Dictionnaire où les clefs sont les mots et les valeurs le nombre d'occurrences\n",
     "    :rtype: dict\n",
@@ -879,7 +948,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Votre code ici\n",
+    "# Votre code ici    \n",
+    "def statistiques_mots(chemin):\n",
+    "    \"\"\" Compte et stocke les ocurrances de chaque mot dans une liste de mots\n",
+    "    :param chemin: chemin vers un fichier texte\n",
+    "    :type chemin: link\n",
+    "    :returns: Dictionnaire ou les clés sont les mots de la liste et les valeurs leur nombre d'ocurrence\n",
+    "    :rtype: dict\n",
+    "    \"\"\"\n",
+    "    with open (chemin) as texte:\n",
+    "        texte = texte.read()\n",
+    "    mots = texte.split()\n",
+    "    decompte ={}\n",
+    "    for mot in set(mots):\n",
+    "        decompte[mot] = mots.count(mot)\n",
+    "    return decompte\n",
+    "\n",
+    "statistiques = statistiques_mots(\"data/liaisons.118.txt\")\n",
+    "print(statistiques['et'])\n",
     "\n",
     "\n",
     "# Cette portion vérifie que votre code fonction\n",
@@ -945,7 +1031,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "On peut appliquer cette fonction à notre texte compet pour obtenir un texte en minuscule de la même manière :"
+    "On peut appliquer cette fonction à notre texte complet pour obtenir un texte en minuscule de la même manière :"
    ]
   },
   {
@@ -1014,10 +1100,21 @@
     "texte = \"Les virgules, si on y pense, vraiment, je vous assure, sont superflues.\"\n",
     "# Votre code ici\n",
     "\n",
+    "texte = texte.lower()\n",
+    "texte = texte.replace(\",\", \"\")\n",
+    "texte = texte.replace (\".\", \"\")\n",
+    "\n",
+    "#ou bien\n",
+    "texte = texte.lower().replace(\",\",\"\").replace(\".\", \"\")\n",
+    "\n",
+    "print(texte)\n",
+    "\n",
+    "\n",
     "# Et on vérifie avec le test.\n",
     "# Notez que si le copier coller est bien, il est mal de copier la chaîne en dessous au dessus.\n",
     "# Le test marcherait mais cela serait un peu malhonnête.\n",
-    "print(texte == \"les virgules si on y pense vraiment je vous assure sont superflues.\")"
+    "print(texte == \"les virgules si on y pense vraiment je vous assure sont superflues\")\n",
+    "# moi : j'ai enlevé le \".\" final au texte == de Clérice, car l'exercice était aussi d'enlever le point. "
    ]
   },
   {
@@ -1048,6 +1145,7 @@
     "    :returns: Texte sans ponctuation\n",
     "    :rtype: str\n",
     "    \"\"\"\n",
+    "    texte = texte.lower()    #cette ligne est un ajout à moi pour aller plus loin dans la fonction\n",
     "    ponctuation = '!@#$%^&*()_-+={}[]:;\"\\'|<>,.?/~`'\n",
     "    for marqueur in ponctuation:\n",
     "        texte = texte.replace(marqueur, \"\")\n",
@@ -1079,11 +1177,11 @@
     "    :rtype: str\n",
     "    \"\"\"\n",
     "    ponctuation = '!@#$%^&*()_-+={}[]:;\"\\'|<>,.?/~`'\n",
-    "    nouveau_texte = \"\"\n",
+    "    texte_propre = \"\"\n",
     "    for charactere in texte:\n",
     "        if charactere not in ponctuation:\n",
-    "            nouveau_texte += charactere\n",
-    "    return nouveau_texte\n",
+    "            texte_propre += charactere\n",
+    "    return texte_propre\n",
     "\n",
     "\n",
     "texte_court = \"Les virgules, si l'on y pense, vraiment, je vous assure, sont superflues.\"\n",
@@ -1127,8 +1225,27 @@
     "    :returns: Texte sans les charactères et en minuscule\n",
     "    :rtype: str\n",
     "    \"\"\"\n",
-    "    # Votre code ici\n",
-    "    \n",
+    "    # Votre code ici    \n",
+    "\n",
+    "    texte = texte.lower()\n",
+    "    for marqueur in ponctuation:\n",
+    "        if marqueur in texte:                    #cette ligne n'est pas indispensable\n",
+    "            texte = texte.replace(marqueur, \"\")\n",
+    "    return(texte)  \n",
+    "\n",
+    "texte_court = \"Les virgules, il paraît, sont superflues. Les points - au contraire - ne le sont pas!\"\n",
+    "print(nettoyer_texte(texte_court, \"!,-.\"))\n",
+    "\n",
+    "\n",
+    "#corrigé\n",
+    "\"\"\"\n",
+    "    for marqueur in ponctuation:\n",
+    "        texte = texte.replace(marqueur,\"\")\n",
+    "    return texte.lower()\n",
+    "\"\"\"\n",
+    " \n",
+    "\n",
+    "\n",
     "# Le test qui vérifie tout\n",
     "texte_court = \"Les virgules, il paraît, sont superflues. Les points - au contraire - ne le sont pas!\"\n",
     "assert nettoyer_texte(texte_court, \"!,-.\") == \\\n",
@@ -1150,7 +1267,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "def separateur_de_texte(texte):\n",
@@ -1160,7 +1279,20 @@
     "    :type texte: str\n",
     "    :returns: Texte simplifié\n",
     "    :rtype: str\n",
-    "    \"\"\""
+    "    \"\"\"\n",
+    "    #corrigé\n",
+    "    with open(texte) as f:\n",
+    "        texte = f.read()\n",
+    "    texte = texte.replace(\"'\", \" \").replace(\"-\", \" \")\n",
+    "    return texte\n",
+    "\n",
+    "\"\"\"\n",
+    "    #corrigé\n",
+    "    with open(texte) as f:\n",
+    "        texte = f.read()\n",
+    "    return texte.replace(\"-\", \" \").replace(\"'\", \" \")\n",
+    "  \n",
+    "\"\"\"\n"
    ]
   },
   {
@@ -1169,12 +1301,62 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
+    "\n",
+    "\"\"\"\n",
+    "\n",
+    "#bon corrigé \n",
+    "texte = separateur_de_texte(\"data/misanthrope.acte3.scene4.txt\")\n",
+    "texte = texte.lower()\n",
+    "texte = supprimer_ponctuation2(texte)     \n",
+    "\n",
+    "decompte = {}\n",
+    "mots = texte.split()\n",
+    "for mot in set(mots):\n",
+    "    decompte[mot] = mots.count(mot) \n",
+    "___________________________________________________________________________________\n",
+    "\n",
+    "\n",
     "# Votre code ici\n",
+    "texte = separateur_de_texte(\"data/misanthrope.acte3.scene4.txt\")\n",
+    "texte = texte.lower()\n",
+    "texte = supprimer_ponctuation2(texte) \n",
+    "\n",
+    "decompte = {}\n",
+    "mots = texte.split()\n",
+    "mots_sans_doublons = set(mots)        \n",
+    "for mot in mots_sans_doublons :                #on compte dans mots car la liste contient toutes les occurrences. Si je compte dans texte, qui est une chaine, j'aurai aussi les \"on\" dans \"mon\", \"monsieur\", etc\n",
+    "    decompte[mot] = mots.count(mot)\n",
+    "    \n",
+    "print(decompte[\"on\"])\n",
+    "print(decompte[\"moi\"])\n",
+    "\n",
+    "\n",
+    "\"\"\"\n",
+    "#corrigé d'ariane, qui est un coup de génie que Clérice n'avais jamais eu comme réponse. Il manque le fait de passer\n",
+    "#en minuscule. Et il n'avait pas demandé une fonction. Je l'ai bidouillé pour qu'il fonctionne\n",
+    "\n",
+    "\n",
+    "def decompte(chemin, mot):\n",
+    "    with open(chemin) as f:\n",
+    "        texte = f.read()\n",
+    "    texte = texte.replace(\"-\", \" - \").replace(\"'\", \" '' \").replace(\".\", \" . \").replace(\",\", \" , \")   \n",
+    "    mots = texte.lower()     #attention ceci va avant split. Si après split, elle le transforme en une seule chaine !\n",
+    "    mots = texte.split()\n",
+    "    compteur = {}\n",
+    "    for chaque_mot in set(mots):\n",
+    "        compteur[chaque_mot] = mots.count(chaque_mot)\n",
+    "    return compteur[mot]\n",
+    "\n",
+    "print(decompte(\"data/misanthrope.acte3.scene4.txt\", \"on\"))\n",
+    "print(decompte(\"data/misanthrope.acte3.scene4.txt\", \"moi\"))\n",
+    "#cette réponse est mauvaise dans la mesure ou elle ne permet pas de confirmer l'assert, qui nécessite être un dic\n",
     "\n",
     "\n",
     "# Les tests\n",
-    "assert decompte[\"on\"] == 3\n",
-    "assert decompte[\"moi\"] == 2"
+    "assert decompte[\"on\"] == 4\n",
+    "assert decompte[\"moi\"] == 2\n",
+    "\n"
    ]
   },
   {
@@ -1276,12 +1458,24 @@
     "# en programmation\n",
     "\n",
     "output = open(\"resultats/premier-resultat.txt\", mode=\"w\")\n",
-    "output.write(\"Mon premier résultat.\")\n",
+    "output.write(\"mon premier résultat, vérification\")\n",
     "output.close()\n",
     "\n",
     "# Ou l'équivalent :\n",
-    "with open(\"resultats/deuxieme-resultat.txt\") as fichier_texte:\n",
-    "    fichier_texte.write(\"Mon 2eme résultat\")"
+    "with open(\"resultats/deuxieme-resultat.txt\", mode=\"w\") as fichier_texte:\n",
+    "    fichier_texte.write(\"Mon 2eme résultat, vérification\")\n",
+    "    \n",
+    "#moi : lecture des fichiers \n",
+    "output = open(\"resultats/premier-resultat.txt\", mode=\"r\")\n",
+    "texte = output.read()\n",
+    "output.close()\n",
+    "print(texte)\n",
+    "\n",
+    "with open(\"resultats/deuxieme-resultat.txt\", mode=\"r\") as fichier_texte:\n",
+    "    texte2 = fichier_texte.read()\n",
+    "print(texte2)\n",
+    "\n",
+    "    \n"
    ]
   },
   {
@@ -1327,7 +1521,9 @@
     "a_tester = \"Je. suis. fatigué. de. devoir. écrire. des. exemples, non ?\"\n",
     "assert supprimer_ponctuation(a_tester) == supprimer_ponctuation(a_tester, \"?.,\")\n",
     "assert supprimer_ponctuation(a_tester) == supprimer_ponctuation(a_tester, ponctuation=\"?.,\")\n",
-    "assert supprimer_ponctuation(a_tester) != supprimer_ponctuation(a_tester, ponctuation=\",\")"
+    "assert supprimer_ponctuation(a_tester) != supprimer_ponctuation(a_tester, ponctuation=\",\")\n",
+    "#tests à moi\n",
+    "supprimer_ponctuation(ponctuation=\",\", texte=a_tester) #ordre peut changer si arguments sont nommées\n"
    ]
   },
   {
@@ -1350,7 +1546,8 @@
     "assert supprimer_ponctuation(a_tester, \",?,\") == \\\n",
     "    supprimer_ponctuation(texte=a_tester, ponctuation=\",?,\")\n",
     "assert supprimer_ponctuation(a_tester, \",?,\") == \\\n",
-    "    supprimer_ponctuation(ponctuation=\",?,\", texte=a_tester)"
+    "    supprimer_ponctuation(ponctuation=\",?,\", texte=a_tester)\n",
+    "#Dans ces exemples il faut absolument donner les deux arguments partout, car la chaîne de caracatères n'est pas celles par défaut !"
    ]
   },
   {
@@ -1410,18 +1607,68 @@
     "    fichier.write(\"Mot;Distribution\\n\")\n",
     "    for mot, frequence in distribution.items():\n",
     "        fichier.write(mot + \";\" + str(frequence) + '\\n')\n",
+    "        \n",
+    "def nettoyer_texte_corneille(texte, ponctuation):     #j'ai repris ma version de l'exo nettoyer_texte()\n",
+    "    \"\"\" Cette fonction transforme les majuscules en minuscules et supprime la ponctuation\n",
+    "    \n",
+    "    :param texte: Texte à nettoyer\n",
+    "    :type texte: str\n",
+    "    :param ponctuation: Charactères à supprimer\n",
+    "    :type ponctuation: str\n",
+    "    :returns: Texte sans les charactères et en minuscule\n",
+    "    :rtype: str\n",
+    "    \"\"\"\n",
+    "    # Votre code ici    \n",
     "\n",
+    "    texte = texte.lower()\n",
+    "    for marqueur in ponctuation:\n",
+    "        if marqueur in texte:                    #cette ligne n'est pas indispensable\n",
+    "            texte = texte.replace(marqueur, \" \")\n",
+    "    return(texte)      \n",
+    "\n",
+    "\"\"\"\n",
+    "#corrigé :              \n",
     "# Ouvrir le fichier et stocker son contenu\n",
-    "\n",
+    "with open(\"data/horace.txt\") as f:\n",
+    "    texte = f.read()\n",
     "# Nettoyer le texte\n",
-    "\n",
-    "\n",
+    "#passe en minuscule\n",
+    "texte=texte.lower()\n",
+    "#on remplace les caractères par des espaces\n",
+    "for point in asdf :    #asdf doit etre tous les caractères genre '!@#$ etc, je sais pas comment les mettre\n",
+    "    texte = texte.replace(point, \" \")\n",
+    "mots = texte.split()\n",
     "# Calculer la distribution\n",
-    "\n",
+    "decompte = {}\n",
+    "for mot in set(mots):\n",
+    "    decompte[mot] = mots.count(mot)\n",
     "# Ouvrir le fichier `frequence_horace.txt` pour écrire\n",
-    "\n",
+    "with open (\"frequence_horace.txt\", mode=\"w\") as f:\n",
     "# Utiliser la fonction ecrire_colonne pour écrire dans ce fichier\n",
-    "\n"
+    "    ecrire_colonne(decompte, f)\n",
+    "\"\"\"\n",
+    "\n",
+    "\n",
+    "\n",
+    "#moi :        \n",
+    "# Ouvrir le fichier et stocker son contenu\n",
+    "with open (\"data/horace.txt\", mode=\"r\") as f:\n",
+    "    oeuvre = f.read()\n",
+    "# Nettoyer le texte\n",
+    "#on remplace les caractères par des espaces\n",
+    "oeuvre = nettoyer_texte_corneille(oeuvre, \",.\\\"\\\\&?¿¡!{}-;''\")\n",
+    "# Calculer la distribution\n",
+    "decompte = {}\n",
+    "oeuvre = oeuvre.split()\n",
+    "for mots in set(oeuvre):\n",
+    "    decompte[mots] = oeuvre.count(mots)\n",
+    "# Ouvrir le fichier `frequence_horace.txt` pour écrire\n",
+    "with open(\"frequence_horace.txt\", mode=\"w\") as texte_frequence:\n",
+    "# Utiliser la fonction ecrire_colonne pour écrire dans ce fichier\n",
+    "    ecrire_colonne(decompte, texte_frequence)\n",
+    "#moi : pour vérifier le résultat : \n",
+    "with open(\"frequence_horace.txt\", mode=\"r\") as texte_voir :\n",
+    "    print(texte_voir.read())\n"
    ]
   },
   {
@@ -1462,7 +1709,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.8.5"
   },
   "toc": {
    "base_numbering": 1,
