--- a/Chapitre 04.1 - CSV.ipynb
+++ b/Chapitre 04.1 - CSV.ipynb
@@ -34,11 +34,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import csv"
+    "import csv\n"
    ]
   },
   {
@@ -50,11 +50,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Dialect',\n",
+       " 'DictReader',\n",
+       " 'DictWriter',\n",
+       " 'Error',\n",
+       " 'QUOTE_ALL',\n",
+       " 'QUOTE_MINIMAL',\n",
+       " 'QUOTE_NONE',\n",
+       " 'QUOTE_NONNUMERIC',\n",
+       " 'Sniffer',\n",
+       " 'StringIO',\n",
+       " '_Dialect',\n",
+       " '__all__',\n",
+       " '__builtins__',\n",
+       " '__cached__',\n",
+       " '__doc__',\n",
+       " '__file__',\n",
+       " '__loader__',\n",
+       " '__name__',\n",
+       " '__package__',\n",
+       " '__spec__',\n",
+       " '__version__',\n",
+       " 'excel',\n",
+       " 'excel_tab',\n",
+       " 'field_size_limit',\n",
+       " 'get_dialect',\n",
+       " 'list_dialects',\n",
+       " 're',\n",
+       " 'reader',\n",
+       " 'register_dialect',\n",
+       " 'unix_dialect',\n",
+       " 'unregister_dialect',\n",
+       " 'writer']"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "dir(csv)"
+    "dir(csv)\n"
    ]
   },
   {
@@ -91,9 +133,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Spam', 'Spam', 'Spam', 'Spam', 'Spam', 'Baked Beans']\n",
+      "Spam, Spam, Spam, Spam, Spam, Baked Beans\n",
+      "['Spam', 'Lovely Spam', 'Wonderful Spam']\n",
+      "Spam, Lovely Spam, Wonderful Spam\n"
+     ]
+    }
+   ],
    "source": [
     "import csv\n",
     "with open('data/csv/eggs.csv', newline='') as csvfile:\n",
@@ -102,7 +155,7 @@
     "        print(row)\n",
     "        print(', '.join(row))\n",
     "# Spam, Spam, Spam, Spam, Spam, Baked Beans\n",
-    "# Spam, Lovely Spam, Wonderful Spam"
+    "# Spam, Lovely Spam, Wonderful Spamss"
    ]
   },
   {
@@ -133,14 +186,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 = vert\n",
+      "1 = rouge\n",
+      "2 = bleu\n"
+     ]
+    }
+   ],
    "source": [
     "couleurs = [\"vert\", \"rouge\", \"bleu\"]\n",
     "\n",
     "for index, couleur in enumerate(couleurs):\n",
-    "    print(str(index)+ \" = \" + couleur)\n"
+    "    print(str(index)+ \" = \" + couleur)\n",
+    "    "
    ]
   },
   {
@@ -156,13 +220,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2260\n"
+     ]
+    }
+   ],
    "source": [
     "pubs = 0\n",
+    "with open (\"data/csv/gaulois.csv\", newline='') as csvfile:\n",
+    "    tableau = csv.reader(csvfile)\n",
+    "    for index, colonne in enumerate(tableau):\n",
+    "        if index >= 1:\n",
+    "            pubs += int(colonne[9])\n",
+    "print(pubs)\n",
+    "    \n",
     "\n",
-    "# Tests pour vérifier : le résultat doit être enregistré dans une variable pubs\n",
+    "\n",
+    "\"\"\"\n",
+    "#correction (j'ai corrigé mon propre code avec la correction)\n",
+    "import csv\n",
+    "with open('data/csv/gaulois.csv', newline='') as f:\n",
+    "    reader = csv.reader(f)\n",
+    "    for row_no, row in enumerate(reader):\n",
+    "        if row_no >= 1:\n",
+    "            pubs += int(row[9])\n",
+    "                     \n",
+    "#exemple avec une liste de listes pour confirmer que les tableaux sont des listes de listes :\n",
+    "\n",
+    "elements = [[\"1\", \"2\", \"3\"],[\"vert\", \"2\", \"bleu\"],[\"autre\", \"2\", \"non\"],[\"boubou\", \"2\", \"tiwi\"]]\n",
+    "pubs = 0\n",
+    "for index, element in enumerate(elements):\n",
+    "    if index >= 1:\n",
+    "        pubs += int(element[1])\n",
+    "print(pubs)\n",
+    "\"\"\"\n",
+    "\n",
+    "# Tests pour vérifier : \n",
+    "#le résultat doit être enregistré dans une variable pubs\n",
     "assert pubs == 2260, \"Il y a eu 2260 publicité sur les premiers numéros du Gaulois\""
    ]
   },
@@ -185,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +293,7 @@
     "with open('data/csv/eggs.csv', 'w') as csvfile:\n",
     "    spamwriter = csv.writer(csvfile, delimiter=' ', quotechar='|', quoting=csv.QUOTE_MINIMAL)\n",
     "    spamwriter.writerow(['Spam'] * 5 + ['Baked Beans'])\n",
-    "    spamwriter.writerow(['Spam', 'Lovely Spam', 'Wonderful Spam'])"
+    "    spamwriter.writerow(['Spam', 'Lovely Spam', 'Wonderful Spam'])\n"
    ]
   },
   {
@@ -227,15 +327,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#le module read_rss ne semble fonctionner que sur linux avec env/bin/activate, pas conda \n",
+    "\n",
+    "import csv\n",
     "from modules_cours.chapitre4 import read_rss\n",
     "\n",
     "# Il s'agit ici de l'adresse RSS d'un flux de la BNF\n",
     "for entree in read_rss(\"http://www.bnf.fr/Satellite?c=Page&cid=1237374444944&locale=1194947514616&p=1237374444944&pagename=bnf_dev%2FRss&typeRss=Biblio\"):\n",
-    "    print(entree)"
+    "    print(entree)       \n",
+    "\n",
+    "        "
    ]
   },
   {
@@ -247,24 +352,131 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['titre', 'date', 'lien']\n",
+      "['Assemblée générale 2021', 'Tue, 14 Sep 2021 10:12:40 +0000', 'http://www.bibliopat.fr/actualite-BiblioPat/assemblee-generale-2021']\n",
+      "['Journées BiblioPat 2021', 'Sun, 05 Sep 2021 16:40:18 +0000', 'http://www.bibliopat.fr/actualite-BiblioPat/journees-bibliopat-2021']\n",
+      "['Vœux 2021 de BiblioPat', 'Fri, 08 Jan 2021 14:57:06 +0000', 'http://www.bibliopat.fr/actualite-BiblioPat/voeux-2021-de-bibliopat']\n",
+      "['Assemblée générale 2020 et table-ronde', 'Mon, 16 Nov 2020 17:02:23 +0000', 'http://www.bibliopat.fr/actualite-BiblioPat/assemblee-generale-2020-et-table-ronde']\n",
+      "['BiblioPat reconfiné et mobilisé', 'Sun, 01 Nov 2020 16:23:25 +0000', 'http://www.bibliopat.fr/actualite-BiblioPat/bibliopat-reconfine-et-mobilise']\n",
+      "['Publication de recommandations pour les services patrimoniaux en temps de pandémie', 'Thu, 30 Apr 2020 16:37:44 +0000', 'http://www.bibliopat.fr/actualite-BiblioPat/publication-de-recommandations-pour-les-services-patrimoniaux-en-temps-de']\n",
+      "['Communiqué interassociatif : Recommandations pour un déconfinement progressif des bibliothèques', 'Wed, 29 Apr 2020 17:01:53 +0000', 'http://www.bibliopat.fr/actualite-BiblioPat/communique-interassociatif-recommandations-pour-un-deconfinement-progressif-des']\n",
+      "['Communiqué interassociatif portant sur la réouverture des bibliothèques suite au discours du Premier Ministre le 28 avril 2020', 'Tue, 28 Apr 2020 17:45:44 +0000', 'http://www.bibliopat.fr/actualite-BiblioPat/communique-interassociatif-portant-sur-la-reouverture-des-bibliotheques-suite-au']\n",
+      "['Vœux 2020', 'Sat, 18 Jan 2020 09:35:28 +0000', 'http://www.bibliopat.fr/actualite-BiblioPat/voeux-2020']\n",
+      "['Journées BiblioPat 2019 - Le patrimoine MOUVEMENTé', 'Fri, 08 Nov 2019 13:38:24 +0000', 'http://www.bibliopat.fr/actualite-BiblioPat/journees-bibliopat-2019-le-patrimoine-mouvemente']\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'\\n#correction\\n#ouvrir un fichier dans lequel on va écrire\\n#on va devoir définir une surcouche pour écrire dans ce fichier en CSV\\n#Attention, paramètre pas par défaut délimiteur = TAB\\n#pour chacune des entréees du flux RSS\\n\\n#Ecrire une ligne qui contient titre, lien, date\\n\\nwith open(\"bibliopat.tsv\", mode=\"w\") as f:\\n    #il s\\'agit ici de l\\'adresse RSS d\\'un fluix de la BNF\\n    ecriveur = csv.writer(f, delimiter=\"\\t\")\\n    for titre, resume, lien, date in read_rss(\"http://www.bibliopat.fr/rss-actualites\"):\\n        ecriveur.writerow([titre, lien, date]\\n'"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from modules_cours.chapitre4 import read_rss\n",
     "import csv\n",
     "\n",
-    "# Votre code ici"
+    "# Votre code ici\n",
+    "\n",
+    "#mon code pour choisir l'entree que l'on veux dans le flux (10 entŕees différentes)\n",
+    "for index, entree in enumerate(read_rss(\"http://www.bibliopat.fr/rss-actualites\")):\n",
+    "    if index == 10:\n",
+    "        print(entree)\n",
+    "        print(type(entree))\n",
+    "\n",
+    "    \n",
+    "#fichier csv en mode écriture\n",
+    "with open('bibliopat.csv', mode='w') as f:\n",
+    "    tableau = csv.writer(f, delimiter=\"\\t\")\n",
+    "    tableau.writerow([\"titre\", \"date\", \"lien\"])\n",
+    "    for titre, resume, lien, date in read_rss(\"http://www.bibliopat.fr/rss-actualites\"):\n",
+    "        tableau.writerow([titre, date, lien])\n",
+    "#j'avais juste mis la valeur entree pour tout le tuple, au lieux de \"titre, resumé, lien, date\", et cela ne marche pas\n",
+    "#on dirait qu'il faut forcément assigner un nom de variable à chaque élément du tuple pour après les écrire sur le csv\n",
+    "        \n",
+    "    \n",
+    "#verifier fichier csv\n",
+    "with open('bibliopat.csv') as f:\n",
+    "    tableau = csv.reader(f, delimiter=\"\\t\")  \n",
+    "    for ligne in tableau:\n",
+    "        print(ligne)\n",
+    "    \n",
+    "\"\"\"\n",
+    "#correction\n",
+    "#ouvrir un fichier dans lequel on va écrire\n",
+    "#on va devoir définir une surcouche pour écrire dans ce fichier en CSV\n",
+    "#Attention, paramètre pas par défaut délimiteur = TAB\n",
+    "#pour chacune des entréees du flux RSS\n",
+    "\n",
+    "#Ecrire une ligne qui contient titre, lien, date\n",
+    "\n",
+    "with open(\"bibliopat.tsv\", mode=\"w\") as f:\n",
+    "    #il s'agit ici de l'adresse RSS d'un fluix de la BNF\n",
+    "    ecriveur = csv.writer(f, delimiter=\"\\t\")\n",
+    "    for titre, resume, lien, date in read_rss(\"http://www.bibliopat.fr/rss-actualites\"):\n",
+    "        ecriveur.writerow([titre, lien, date]\n",
+    "\"\"\""
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
-   "source": [
-    "##### Avez-vous remarqué ?\n",
-    "\n",
-    "Ci-dessus, nous avons utilisé `from ___ import ___`. Cette structure d'import nous permet de n'importer qu'un sous-module ou une sous-fonction en particulier. Très pratique pour éviter les noms à rallonge !"
-   ]
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -306,7 +518,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
